Fix: Tags overflowing container

--- a/src/components/Tags/tags.module.scss
+++ b/src/components/Tags/tags.module.scss
@@ -10,10 +10,12 @@
 
 .tagsList {
     display: flex;
+    flex-wrap: wrap;
+    margin: -2px;
 }
 
-.tag + .tag {
-    margin-left: 5px;
+.tag {
+    padding: 2px;
 }
 
 .tagLink {
